# Axons_4_Agents

./: .coverage  .gitignore  PLAN.md  README.md  TODO.md  pyproject.toml  requirements.txt
axons/: __init__.py  client.py  enums.py  models.py  permeability.py  plasticity.py
axons/mcp/: __init__.py  __main__.py  server.py
docs/: compartmentalization.md  design-decisions.md  infrastructure.md  plasticity-config.md  schema.md  setup-instructions.md  usage-guide.md
src/: directory.md  memory_client.py  schema.cypher  test_memory_system.py
tests/: conftest.py  test_mcp_server.py  test_memory_system.py
