[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axons"
version = "0.1.0"
description = "Graph-based memory system for AI agents using LadybugDB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "real_ladybug>=0.14.0",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["axons*"]
